[package]
name = "hexagon-map"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/hexagon-map"
documentation = "https://docs.rs/hexagon-map"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]

[features]
default = []
