[package]
name = "hexagon-web"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Coordinate transformation and pathfinding for hexagonal maps"
repository = "https://github.com/oovm/hexagon-map"
documentation = "https://docs.rs/hexagon-svg"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
svg = "0.13.1"
dioxus = "0.3.2"
dioxus-web = "0.3.1"

[dependencies.hexagon-map]
#version = "0.0.1"
path = "../hexagon-map"

[dev-dependencies]

[features]
default = []
